Bug 258749 - klipper menu - pressing enter doesn't close the popup window
Summary: klipper menu - pressing enter doesn't close the popup window
Status: RESOLVED FIXED
Alias: None
Product: klipper
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: 0.9.6
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Esben Mose Hansen
URL:
Keywords:
: 264762 265616 265782 267064 271398 272612 279807 287919 (view as bug list)
Depends on:
Blocks:
 
Reported: 2010-12-04 00:31 UTC by Ivan Borzenkov
Modified: 2012-03-22 19:55 UTC (History)
26 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.8.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ivan Borzenkov 2010-12-04 00:31:50 UTC
Version:           0.9.6 (using KDE 4.5.80) 
OS:                Linux

press enter in klipper tray menu not select element (not option - copied item) and close menu

Reproducible: Always

Steps to Reproduce:
1) open tray menu
2) select one of element (copied item)
3) press enter

Actual Results:  
nothing

Expected Results:  
select element and close menu (as other menus)

OS: Linux (i686) release 2.6.37-6-generic
Compiler: cc
Comment 1 Ivan Borzenkov 2010-12-04 00:33:13 UTC
v0.9.7 - i can not select this version in list
Comment 2 Christoph Lange 2011-03-06 12:06:23 UTC
Confirming for 4.6.1 (Gentoo).
Comment 3 Yakov Markovitch 2011-03-22 09:23:46 UTC
Confirming for 4.6.1 OpenSUSE 11.4 x86_64
The most annoying bug in KDE ever, for any keyboard-oriented worker.
Comment 4 g111 2011-04-09 22:42:28 UTC
Is this the same bug as reported with bug #267064?

Also I think the reported behaviour "Actual Results: nothing" is not exactly correct as the entry is selected, even if you do not see it.
Comment 5 Roberto Ragusa 2011-04-11 00:02:39 UTC
Confirmed on Fedora 14 (KDE 4.6.1). Very annoying.
(and what is the checkmark supposed to mean???)
Comment 6 Esben Mose Hansen 2011-04-11 11:08:26 UTC
That the entry is the current clipboard.
Comment 7 Erwin Mueller 2011-04-13 22:41:43 UTC
Confirmed on Fedora 14. Confirmed that the entry is selected and in the current clipboard (you can past it). Esc will close the menu, and the menu entry "More" is hidden after pressing enter. Very annoying indeed.
Comment 8 Vaso 2011-04-26 10:37:28 UTC
I think somebody must clean up the heap around the bug.
1. In summary the phrase "doesn't close poppup windows" should be added.
2. Next bugs should be closed as duplicates: 264762, 265616, 265782 & 267064.
Comment 9 Vaso 2011-04-26 10:38:55 UTC
*** This bug has been confirmed by popular vote. ***
Comment 10 Christoph Feck 2011-05-15 18:23:23 UTC
*** Bug 264762 has been marked as a duplicate of this bug. ***
Comment 11 Christoph Feck 2011-05-15 18:23:48 UTC
*** Bug 265616 has been marked as a duplicate of this bug. ***
Comment 12 Christoph Feck 2011-05-15 18:24:11 UTC
*** Bug 265782 has been marked as a duplicate of this bug. ***
Comment 13 Christoph Feck 2011-05-15 18:24:38 UTC
*** Bug 267064 has been marked as a duplicate of this bug. ***
Comment 14 Christoph Feck 2011-05-15 18:24:57 UTC
*** Bug 272612 has been marked as a duplicate of this bug. ***
Comment 15 Oleg Kostyuk 2011-06-13 23:21:02 UTC
Confirmed on Kubuntu 11.04, KDE 4.6.2, exactly same as described in comment#7
Comment 16 Milos Novotny 2011-06-27 09:57:20 UTC
Confirmed on Gentoo, KDE 4.6.4.
Comment 17 Attila 2011-07-08 07:39:28 UTC
I can reproduce the bug on Fedora 14 and Fedora 15.
Comment 18 Yakov Markovitch 2011-07-09 15:57:28 UTC
What is going on? This bug persists now for HALF A YEAR. It is _EXTREMELY_ annoying and clearly not a rocket science to fix. Hey? Anybody there, Klipper developers? Will it bug persist in 4.7? Or now that is important only smartphone and tablet users, who needn't keyboard interface at all?
Comment 19 wm 2011-07-09 16:51:49 UTC
it's open source, you can fix it by yourself.
Comment 20 Yakov Markovitch 2011-07-09 17:34:50 UTC
(In reply to comment #19)
> it's open source, you can fix it by yourself.
No I can not. I have not enough skill, I never programmed GUI. With such attitude, don't then position KDE as desktop environment for a user, say clear - "KDE, a desktop environment for C++ GUI hackers" This will be honest at least.

P.S. And yes, I contribute both my time/code to FOSS where my skills fit. _And_ money, BTW, I donate KDE regularly.
Comment 21 Esben Mose Hansen 2011-07-17 15:42:35 UTC
Comments like 18,19,20 are not very helpful. The thing is that the maintenance of Klipper is currently very sporadic, and a lot of stuff has broken. You are not being ignored, it's just that noone with the right skills and the time for it has come by to fix it. Shouting in the bug reports won't help. Sorry, I know this is an annoying bug.

A silly workaround is pressing Enter and then Esc.
Comment 22 Jesús Guerrero Botella 2011-07-17 17:45:18 UTC
(In reply to comment #21)
> Comments like 18,19,20 are not very helpful. The thing is that the maintenance
> of Klipper is currently very sporadic, and a lot of stuff has broken. You are
> not being ignored, it's just that noone with the right skills and the time for
> it has come by to fix it.

Indeed.

> A silly workaround is pressing Enter and then Esc.

Yes.

In addition, people who absolutely don't like that little annoyance could try parcellite, as long as they are not allergic to gtk+.
Comment 23 Jekyll Wu 2011-11-07 01:02:12 UTC
*** Bug 279807 has been marked as a duplicate of this bug. ***
Comment 24 Jekyll Wu 2011-11-07 11:53:44 UTC
*** Bug 271398 has been marked as a duplicate of this bug. ***
Comment 25 Jekyll Wu 2011-12-03 16:32:00 UTC
*** Bug 287919 has been marked as a duplicate of this bug. ***
Comment 26 ermonnezza 2011-12-06 17:01:38 UTC
Confirmed in 4.7.2, including the silly workaround from Comment #21
Comment 27 Jekyll Wu 2011-12-27 11:38:53 UTC
Well, I did some analysis. This bug was introduced as another side effect of dbusmenu being disabled for Klipper since KDE SC 4.6(more precisely, commit 102a17ca9ed87ef313865ec2b23569f6915ad652).  See bug 260830 for more information.

The good news is I find this bug can be fixed in a not-so-elegant way.
Comment 28 Jekyll Wu 2011-12-27 11:54:09 UTC
Git commit 3918ecbd1d8d41da5926c5b3d8360635d79bfdd8 by Jekyll Wu.
Committed on 27/12/2011 at 10:32.
Pushed by jekyllwu into branch 'KDE/4.8'.

Pressing 'Enter' should close the popup menu after selecting item

This fix is not that elegant, but currently I can't figure out a better
way. From a pragmatic perspective, it is better to fix it now in a ugly
way than waiting for the elegant solution. It has been broken for one
year :(
Related: bug 258749
FIXED-IN:4.8.0

M  +9    -2    klipper/klipperpopup.cpp

http://commits.kde.org/kde-workspace/3918ecbd1d8d41da5926c5b3d8360635d79bfdd8
Comment 29 Jared B. 2012-03-22 19:55:33 UTC
Jekyll, I know I'm late commenting on this, but I just got a chance to test this out on KDE 4.8 and it works great now.  Thanks a bunch for fixing it.