Pressing 'Enter' should close the popup menu after selecting item

This fix is not that elegant, but currently I can't figure out a better
way. From a pragmatic perspective, it is better to fix it now in a ugly
way than waiting for the elegant solution. It has been broken for one
year :(

BUG:258749
FIXED-IN:4.8.0